--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
     "@react-navigation/stack": "^6.2.2",
+    "@svanboxel/visibility-sensor-react-native": "^1.0.2",
     "@types/react-native-vector-icons": "^6.4.11",
     "@types/react-native-video": "^5.0.14",
     "react": "17.0.2",
